# ai-playground

./: .gitattributes  Cargo.toml  README.md  flake.nix  palm_detection_lite.onnx
src/: main.rs
